# INGENIERIA-DE-SOFTWARE-I

./: README.md
.devcontainer/: devcontainer.json
Timeflow/TimeflowTracker/: app.py  auth.db  pyproject.toml  replit.md
Timeflow/TimeflowTracker/attached_assets/: Pasted-NOMBRE-DE-APLICACI-N-TIME-FLOW-1-Caso-de-uso-Importar-Datos-Actor-Usuario-Precondici-n-El-usu-1752106467787_1752106467788.txt
Timeflow/TimeflowTracker/pages/: 1_Data_Import.py  2_Preprocessing.py  3_Visualization.py  4_Analysis.py  5_Advanced_Modeling.py  5_Modeling.py  6_Enhanced_Forecasting.py  6_Forecasting.py
Timeflow/TimeflowTracker/utils/: advanced_models.py  auth.py  data_import.py  forecasting.py  interpretation.py  pdf_export.py  preprocessing.py  sarima_modeling.py  time_series_analysis.py  visualization.py
