[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "arch>=7.2.0",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "psycopg2-binary>=2.9.10",
    "reportlab>=4.4.2",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "sqlalchemy>=2.0.41",
    "statsmodels>=0.14.5",
    "streamlit>=1.46.1",
    "xlrd>=2.0.2",
]
